--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,8 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+callouts_level: quiet
+callouts:
+  important:
+    title: Important
+    color: blue
