--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-search_enable: true
+search_enabled: true
 search: 
   heading_level: 2
   previews: 2
